compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__inlining__inline_variable_shadowed_in_case_pattern.snap
---
source: compiler-core/src/erlang/tests/inlining.rs
expression: "\npub fn sum() {\n  let a = 10\n  let b = 20\n\n  fn(x) {\n    case 7, 8 {\n      a, b -> a + b + x\n    }\n  }(a + b)\n\n  a + b\n}\n"
---
----- SOURCE CODE

pub fn sum() {
  let a = 10
  let b = 20

  fn(x) {
    case 7, 8 {
      a, b -> a + b + x
    }
  }(a + b)

  a + b
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([sum/0]).

-file("project/test/my/mod.gleam", 2).
-spec sum() -> integer().
sum() ->
    A = 10,
B = 20,
case {7, 8} of
    {_inline_a_0, _inline_b_1} ->
        (_inline_a_0 + _inline_b_1) + (A + B)
end,
A + B.
